--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "devDependencies": {
     "chai": "^4.3.10",
+    "cors": "^2.8.5",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
