--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install",
     "start": "node ./src/server.js",
     "startmon": "nodemon ./src/server.js",
     "migrate": "knex migrate:latest",
